[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]

[tool.poetry]
name = "pickled_canary"
version = "0.3.0"
description = ""
authors = ["The MITRE Corporation"]

[tool.poetry.dependencies]
pytest = { version = "^7.1.2", python = ">=3.7" }

[tool.poetry.dev-dependencies]
black = { version = "^22.6.0", python = ">=3.6.2" }

[tool.cibuildwheel]
skip = ["*-musllinux_i686"]