[package]
name = "pclib"
authors = ["Peter <plucia@mitre.org>"]
version = "0.2.0"
edition = "2018"
license-file = "LICENSE.txt"

[lib]
# TODO: uncomment the next line when done benching
crate-type = ["cdylib", "lib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
treesearchlib = { path = "../treesearchlib" }
bitvec = "~1.0"
memmap2 = "0.7.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8.5"

[[bench]]
name = "rustlibtest"
harness = false
