[package]
name = "treesearchlib"
version = "0.0.6"
authors = ["Peter <plucia@mitre.org>"]
edition = "2018"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "~1.0"
hashbrown = { version = "0.14.5", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
# mutagen = {git = "https://github.com/llogiq/mutagen"}
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8.5"

[[bench]]
name = "my_benchmark"
harness = false
