[package]
name = "treesearchtool"
version = "0.3.0"
authors = ["Peter <plucia@mitre.org>"]
edition = "2018"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
treesearchlib = { path = "../treesearchlib" }
pclib = { path = "../pclib" }
serde_json = "1.0"
bitvec = "~1.0"
cli-table = "0.4.6"
csv = "1.1.6"
walkdir = "2"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
memmap2 = "0.7.0"
clap = { version = "4.3.10", features = ["derive"] }

[dev-dependencies]
rand = "0.8.4"
lazy_static = "1.4.0"
